--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <<h1> heya </h1>>
+    <h1> heya </h1>
+    <<h2> not a robot </h2>> 
   </body>
 </html>
